Fix units list positioning when sidenav is collapsed.

--- a/client/app/reporting/reporting-unit/reporting-unit.scss
+++ b/client/app/reporting/reporting-unit/reporting-unit.scss
@@ -2,6 +2,10 @@
 
 .reporting-unit {
   reporting-unit-list {
+    .br-mailbox-list {
+      left: auto;
+    }
+
     @include media-breakpoint-down(md) {
       .br-mailbox-list {
         position: static;
